--- a/src/containers/Market/MarketDetails/index.less
+++ b/src/containers/Market/MarketDetails/index.less
@@ -123,9 +123,9 @@
                 }
             }
             .ant-slider-handle{
-                width: 27px;
-                height: 27px;
-                border-radius: 27px;
+                width: 25px;
+                height: 25px;
+                border-radius: 25px;
                 margin-top: -3px;
                 transform: translateX(0) !important;
                 .dark-mode & {
@@ -192,10 +192,10 @@
                 }
             }
             .ant-slider-handle{
-                width: 27px;
-                height: 27px;
-                border-radius: 27px;
-                margin-top: -4px;
+                width: 25px;
+                height: 25px;
+                border-radius: 25px;
+                margin-top: -3px;
                 transform: translateX(0) !important;
                 .dark-mode & {
                     background: @white;
